--- a/rubix-solver.vcxproj.filters
+++ b/rubix-solver.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="rubix-solver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cube.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
