--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,7 @@
-CMakeFiles/
-cmake_install.cmake
-CMakeCache.txt
-
+# Visual Studio
 .vscode/
-
-libs/
-Makefile
-
-*.part
-*.mp4
-
-.idea/
-build/
-
+.vs/
+x64
 
 # Prerequisites
 *.d
@@ -46,6 +35,3 @@ build/
 *.exe
 *.out
 *.app
-
-
-.vs/
