--- a/rubix-solver.vcxproj.filters
+++ b/rubix-solver.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="cube.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="solver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
