--- a/rubix-solver.vcxproj.filters
+++ b/rubix-solver.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="solver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
