--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required(VERSION 3.2)
 
 project( rubix-solver )
 
-# find_package( OpenCV REQUIRED )
-# include_directories( ${OpenCV_INCLUDE_DIRS} )
+find_package( OpenCV REQUIRED )
+include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-add_executable( rubix-solver ./main.cpp )
-target_link_libraries( rubix-solver )
+add_executable( rubix-solver ./main.cpp  )
+target_link_libraries( rubix-solver ${OpenCV_LIBS} )
